# biosim4

./: .gitignore  .hgignore  CMakeLists.txt  Dockerfile  Entity architecture.md  LICENSE  Makefile  MercurialChanges  README.md  __runwithtee.sh  biosim4.cbp  biosim4.ini  biosim4.layout  bugs.md  compile.sh  gtest_to_catch2.sed  notes.md  preparedocker.sh  rearchitect.md  results.json  rundocker.sh  runsimulation.sh
.github/workflows/: main.yml
.hg/: dirstate  hgrc  last-message.txt  requires  undo.backup.dirstate  undo.desc
.hg/cache/: branch2-base  branch2-served  rbc-revs-v1  tags2-visible
.hg/store/: 00changelog.i  00manifest.i  fncache  undo.backup.fncache  undo.backupfiles  undo.phaseroots
.hg/store/data/: _dockerfile.i  _l_i_c_e_n_s_e.i  _makefile.i  _r_e_a_d_m_e.md.i  biosim4.cbp.i  biosim4.ini.i  compile.sh.i  preparedocker.sh.i  rundocker.sh.i  runsimulation.sh.i  ~2egitignore.i  ~2ehgignore.i
.hg/store/data/src/: analysis.cpp.i  basic_types.cpp.i  basic_types.h.i  create_barrier.cpp.i  end_of_generation.cpp.i  end_of_sim_step.cpp.i  execute_actions.cpp.i  feed_forward.cpp.i  genome-compare.cpp.i  genome-neurons.h.i  genome.cpp.i  get_sensor.cpp.i  grid.cpp.i  grid.h.i  image_writer.cpp.i  (+20 more)
.hg/wcache/: manifestfulltextcache
Resources/: Black.txt
sample/: biosim4_sample.ini  genome_sample.txt
src/: CMakeLists.txt  ProfilingInstrumentor.h  analysis.cpp  basicTypes.cpp  basicTypes.h  biosim4.layout  column.h  createBarrier.cpp  dirFactory.cpp  dirFactory.h  endOfGeneration.cpp  endOfSimStep.cpp  executeActions.cpp  feedForward.cpp  genome-compare.cpp  genome-neurons.h  genome.cpp  getSensor.cpp  grid.cpp  grid.h  imageWriter.cpp  imageWriter.h  indiv.cpp  indiv.h  main.cpp  params.cpp  params.h  peeps.cpp  peeps.h  random.cpp  random.h  sensors-actions.h  signals.cpp  signals.h  simulator.cpp  simulator.h  spawnNewGeneration.cpp  survival-criteria.cpp  survivalCriteria.h  survivalСriteria.cpp  (+3 more)
src/ai/: executeActions.cpp  feedForward.cpp  genome-compare.cpp  genome-neurons.h  genome.cpp  getSensor.cpp  indiv.cpp  indiv.h  sensors-actions.h  signals.cpp  signals.h
src/common/: CMakeLists.txt  basicTypes.cpp  basicTypes.h  column.cpp  column.h  compass.h  coord.cpp  coord.h  dir.cpp  dir.h  polar.cpp  polar.h
src/common/include/: common.h  compass.h  coord.h  createGridBarrierVisitor.h  dir.h  grid.h  gridBuilder.h  gridCircle.h  gridLocationVisitor.h  gridRectangle.h  gridShape.h  gridShapeFactory.h  layer.h  polar.h  setSignalVisitor.h
src/common/src/: column.cpp  coord.cpp  createGridBarrierVisitor.cpp  dir.cpp  grid.cpp  gridBuilder.cpp  gridCircle.cpp  gridLocationVisitor.cpp  gridRectangle.cpp  gridShape.cpp  gridShapeFactory.cpp  layer.cpp  polar.cpp  setSignalVisitor.cpp
src/common/test/: test_column.cpp  test_compass.cpp  test_coord.cpp  test_createGridBarrierVisitor.cpp  test_dir.cpp  test_grid.cpp  test_gridBuilder.cpp  test_gridCircle.cpp  test_layer.cpp  test_polar.cpp
src/domain/: CMakeLists.txt
src/domain/include/: connectionList.h  gene.h  genome.h  genomeBuilder.h  indiv.h  indivBuilder.h  neuralNet.h  neuralNetBuilder.h  node.h
src/domain/src/: connectionList.cpp  gene.cpp  genome.cpp  genomeBuilder.cpp  indiv.cpp  indivBuilder.cpp  neuralNet.cpp  neuralNetBuilder.cpp
src/domain/test/: test_connectionList.cpp  test_gene.cpp  test_genome.cpp  test_genomeBuilder.cpp  test_helper.cpp  test_helper.h  test_indiv.cpp  test_neuralNet.cpp  test_neuralNetBuilder.cpp
src/survivalCriteria/: ChallengeAgainstAnyWall.cpp  ChallengeAgainstAnyWall.h  ChallengeAltruism.cpp  ChallengeAltruism.h  ChallengeAltruismSacrifice.cpp  ChallengeAltruismSacrifice.h  ChallengeCenterSparse.cpp  ChallengeCenterSparse.h  ChallengeCenterUnweighted.cpp  ChallengeCenterUnweighted.h  ChallengeCenterWeighted.cpp  ChallengeCenterWeighted.h  ChallengeCircle.cpp  ChallengeCircle.h  ChallengeCorner.cpp  ChallengeCorner.h  ChallengeCornerRandom.cpp  ChallengeCornerRandom.h  ChallengeCornerWeighted.cpp  ChallengeCornerWeighted.h  ChallengeEastWestEights.cpp  ChallengeEastWestEights.h  ChallengeLeftEight.cpp  ChallengeLeftEight.h  ChallengeLocationSequence.cpp  ChallengeLocationSequence.h  ChallengeMigrateDistance.cpp  ChallengeMigrateDistance.h  ChallengeNearBarrier.cpp  ChallengeNearBarrier.h  ChallengePairs.cpp  ChallengePairs.h  ChallengeRadioactiveWalls.cpp  ChallengeRadioactiveWalls.h  ChallengeRightHalf.cpp  ChallengeRightHalf.h  ChallengeRightQuarter.cpp  ChallengeRightQuarter.h  ChallengeString.h  ChallengeTouchAnyWall.cpp  (+40 more)
src/userio/: SFMLUserIO.cpp  SFMLUserIO.h  UserIO.cpp  UserIO.h  imageWriter.cpp  imageWriter.h
src/userio/sfmlComponents/: BarrierBoxComponent.cpp  BarrierBoxComponent.h  BottomButtonsComponent.cpp  BottomButtonsComponent.h  ChallengeBoxComponent.cpp  ChallengeBoxComponent.h  ConsoleComponent.cpp  ConsoleComponent.h  FlowControlComponent.cpp  FlowControlComponent.h  InfoWindowComponent.cpp  InfoWindowComponent.h  RightPanelComponent.cpp  RightPanelComponent.h  SpeedControlsComponent.cpp  SpeedControlsComponent.h  ViewComponent.cpp  ViewComponent.h
src/userio/sfmlComponents/flowComponents/: FlowControlComponent.cpp  FlowControlComponent.h  SpeedControlsComponent.cpp  SpeedControlsComponent.h
src/userio/sfmlComponents/settingsComponents/: AbstractComboBoxComponent.cpp  AbstractComboBoxComponent.h  BarrierBoxComponent.cpp  BarrierBoxComponent.h  ChallengeBoxComponent.cpp  ChallengeBoxComponent.h  ComboBoxItems.h
src/utils/: ProfilingInstrumentor.h  Save.cpp  Save.h  analysis.cpp  random.cpp  random.h  unitTestBasicTypes.cpp  unitTestConnectNeuralNetWiringFromGenome.cpp  unitTestGridVisitNeighborhood.cpp
src/view/: SFMLView.cpp  SFMLView.h  View.cpp  View.h  imageWriter.h
test/: CMakeLists.txt  test_column.cpp  test_compass.cpp  test_coord.cpp  test_dir.cpp  test_grid.cpp  test_polar.cpp
tests/: README.md  simtest.sh  testapp.py
tests/configs/: biosim4-test-1.ini  testapp.ini
tests/pylib/: config.py  include_tests.py  testlib.py  threadutils.py
tools/: .gitignore  graph-nnet.py  graphlog-genomeLength.gp  graphlog.gp
(+35 files in other folders)
