cmake_minimum_required(VERSION 3.22.1)
project(BioSim4 VERSION 0.3.0)

# include(CTest)
# enable_testing()

add_subdirectory(src)

#  this builds the test exe
add_subdirectory(test)


install(FILES ./biosim4.ini DESTINATION ./)
install(DIRECTORY ./tools/ DESTINATION tools)
install (DIRECTORY DESTINATION "logs" DIRECTORY_PERMISSIONS 
    OWNER_WRITE OWNER_READ OWNER_EXECUTE
    GROUP_READ GROUP_READ GROUP_EXECUTE
    GROUP_READ WORLD_READ WORLD_EXECUTE)
install (DIRECTORY DESTINATION "images" DIRECTORY_PERMISSIONS 
    OWNER_WRITE OWNER_READ OWNER_EXECUTE
    GROUP_READ GROUP_READ GROUP_EXECUTE
    GROUP_READ WORLD_READ WORLD_EXECUTE)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
